@@ -1,75 +1,0 @@
-Summary: Library providing the FAM File Alteration Monitor API
-Name: gamin
-Version: 0.0.1
-Release: pre1
-License: LGPL
-Group: Development/Libraries
-Source: gamin-%{version}.tar.gz
-BuildRoot: %{_tmppath}/%{name}-%{version}-root
-# TODO: fix the URL once a web site is built
-URL: http://veillard.com/
-Obsoletes: fam
-Provides: fam
-Provides: libfam.so.0
-Prefix: %{_prefix}
-Docdir: %{_docdir}
-
-%description
-This C library provides an API and ABI compatible file alteration
-monitor mechanism compatible with FAM but not dependant on a system wide
-daemon.
-
-%package devel
-Summary: Libraries, includes, etc. to embed the Gamin library
-Group: Development/Libraries
-Requires: gamin = %{version}
-Obsoletes: fam-devel
-Provides: fam-devel
-
-%description devel
-This C library provides an API and ABI compatible file alteration
-monitor mechanism compatible with FAM but not dependant on a system wide
-daemon.
-
-%prep
-%setup -q
-
-%build
-%configure
-make
-
-%install
-rm -fr %{buildroot}
-
-%makeinstall
-
-%clean
-rm -fr %{buildroot}
-
-%post
-/sbin/ldconfig
-
-%postun
-/sbin/ldconfig
-
-%files
-%defattr(-, root, root)
-
-%doc AUTHORS ChangeLog NEWS README Copyright TODO
-%{_libdir}/lib*.so.*
-%{prefix}/bin/gam_server
-
-%files devel
-%defattr(-, root, root)
-
-%doc AUTHORS ChangeLog NEWS README Copyright TODO
-%{_libdir}/lib*.so
-%{_libdir}/*a
-%{prefix}/include/fam.h
-%{_libdir}/pkgconfig/gamin.pc
-
-
-%changelog
-* Tue Jun 15 2004 Daniel Veillard <veillard@redhat.com>
-- upstream release 0.0.1
-
