@@ -1,3 +1,13 @@
+Wed Jun 16 23:35:13 CEST 2004 Daniel Veillard <veillard@redhat.com>
+
+	* libgamin/gam_api.c libgamin/gam_data.c libgamin/gam_data.h
+	  server/gam_channel.c server/gam_connection.c TODO: Changed
+	  the protocol to add an authentication byte from the server
+	  to the client at the beginning of the stream and authentication
+	  code on the client to check that the server is running under
+	  the same user.
+	* gamin.spec: generated by configure, removed.
+
 Wed Jun 16 11:55:59 CEST 2004 Daniel Veillard <veillard@redhat.com>
 
 	* TODO libgamin/Makefile.am libgamin/gamin_sym.version: block
